--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@supabase/supabase-js": "^2.11.0",
@@ -16,6 +17,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-redux": "^7.1.25",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.6.0",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
