--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.59.3",
     "swr": "^2.1.0",
