--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.3",
@@ -22,6 +23,7 @@
     "@types/react-redux": "^7.1.25",
     "classnames": "^2.3.2",
     "framer-motion": "^10.6.0",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
