--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "framer-motion": "^10.6.0",
     "lodash": "^4.17.21",
