--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.11.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.0.11",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
@@ -29,6 +30,7 @@
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
