--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@badrap/bar-of-progress": "^0.2.2",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.2",
