--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.59.3",
@@ -42,6 +43,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
