--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@supabase/auth-helpers-nextjs": "^0.5.6",
     "@supabase/auth-helpers-react": "^0.3.1",
