--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-scroll": "^1.8.9",
+    "react-window": "^1.8.8",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.59.3",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.6",
+    "@types/react-window": "^1.8.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
