--- a/package.json
+++ b/package.json
@@ -29,22 +29,28 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "framer-motion": "^10.6.0",
+    "i18next": "^22.4.14",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-scroll": "^1.8.9",
+    "react-window": "^1.8.8",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.59.3",
-    "swr": "^2.1.0",
+    "swr": "^2.1.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/react-scroll": "^1.8.6",
+    "@types/react-window": "^1.8.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
