--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.2",
     "react-window": "^1.8.8",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
